--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="css/Windows.css" />
 <link rel="stylesheet" type="text/css" href="css/OldGames.css" />
 
+<script type="text/javascript" src="scripts/utils/utils.js"></script>
 <script type="text/javascript" src="scripts/data/data.js"></script>
 
 </head>
