--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"> 
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Cliente Web ChessD</title>
 
 <link rel="stylesheet" type="text/css" href="css/Main.css" />
 <link rel="stylesheet" type="text/css" href="css/Login.css" />
@@ -16,12 +15,13 @@
 <link rel="stylesheet" type="text/css" href="css/Windows.css" />
 <link rel="stylesheet" type="text/css" href="css/OldGames.css" />
 
-<script type="text/javascript" src="scripts/utils/utils.js"></script>
-<script type="text/javascript" src="scripts/data/data.js"></script>
-
 </head>
 
 <body>
+	<script type="text/javascript" src="scripts/utils/utils.js"></script>
+	<script type="text/javascript" src="scripts/data/data.js"></script>
+
+	<script type="text/javascript" src="scripts/interface/login.js"></script>
 </body>
 
 </html>
