Iniciando troca de mensagens.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
 	<script type="text/javascript" src="scripts/utils/utils.js"></script>
 	<script type="text/javascript" src="scripts/data/data.js"></script>
+	<script type="text/javascript" src="scripts/login/login.js"></script>
 
 	<script type="text/javascript" src="scripts/interface/login.js"></script>
 </body>
