--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<script type="text/javascript" src="scripts/utils/utils.js"></script>
 	<script type="text/javascript" src="scripts/data/data.js"></script>
 	<script type="text/javascript" src="scripts/login/login.js"></script>
+	<script type="text/javascript" src="scripts/connection/connection.js"></script>
+	<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
 
 	<script type="text/javascript" src="scripts/interface/login.js"></script>
 </body>
