--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	<script type="text/javascript" src="scripts/login/login.js"></script>
 	<script type="text/javascript" src="scripts/connection/connection.js"></script>
 	<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
+	<script type="text/javascript" src="scripts/parser/parser.js"></script>
+	<script type="text/javascript" src="scripts/parser/parser_iq.js"></script>
 
 	<script type="text/javascript" src="scripts/interface/login.js"></script>
 </body>
