--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 <body>
 	<script type="text/javascript" src="scripts/utils/utils.js"></script>
 	<script type="text/javascript" src="scripts/data/data.js"></script>
+	<script type="text/javascript" src="scripts/data/consts.js"></script>
 	<script type="text/javascript" src="scripts/login/login.js"></script>
 	<script type="text/javascript" src="scripts/connection/connection.js"></script>
 	<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser_iq.js"></script>
+	<script type="text/javascript" src="scripts/contact/contact.js"></script>
 
 	<script type="text/javascript" src="scripts/interface/login.js"></script>
 </body>
