--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser_iq.js"></script>
+	<script type="text/javascript" src="scripts/parser/parser_presence.js"></script>
 	<script type="text/javascript" src="scripts/contact/contact.js"></script>
 
 	<script type="text/javascript" src="scripts/interface/login.js"></script>
