Começando a fazer parse de mensagens de chat.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<script type="text/javascript" src="scripts/parser/parser_chat.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser_presence.js"></script>
 	<script type="text/javascript" src="scripts/contact/contact.js"></script>
+	<script type="text/javascript" src="scripts/chat/chat.js"></script>
 
 	<script type="text/javascript" src="scripts/interface/login.js"></script>
 </body>
