Arrumados erros do ultimo commit e inserido tela de 'load'.

--- a/index.html
+++ b/index.html
@@ -5,15 +5,7 @@
 
 <link rel="stylesheet" type="text/css" href="css/Main.css" />
 <link rel="stylesheet" type="text/css" href="css/Login.css" />
-<link rel="stylesheet" type="text/css" href="css/TopMenu.css" />
-<link rel="stylesheet" type="text/css" href="css/BottomMenu.css" />
-<link rel="stylesheet" type="text/css" href="css/News.css" />
-<link rel="stylesheet" type="text/css" href="css/Contact.css" />
-<link rel="stylesheet" type="text/css" href="css/Rooms.css" />
-<link rel="stylesheet" type="text/css" href="css/Board.css" />
-<link rel="stylesheet" type="text/css" href="css/PopDown.css" />
-<link rel="stylesheet" type="text/css" href="css/Windows.css" />
-<link rel="stylesheet" type="text/css" href="css/OldGames.css" />
+<link rel="stylesheet" type="text/css" href="css/Load.css" />
 
 </head>
 
@@ -22,16 +14,21 @@
 	<script type="text/javascript" src="scripts/data/data.js"></script>
 	<script type="text/javascript" src="scripts/data/consts.js"></script>
 	<script type="text/javascript" src="scripts/login/login.js"></script>
+	<script type="text/javascript" src="scripts/login/load.js"></script>
 	<script type="text/javascript" src="scripts/connection/connection.js"></script>
 	<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
+
+	<script type="text/javascript" src="scripts/interface/login.js"></script>
+	<script type="text/javascript" src="scripts/interface/load.js"></script>
+
+	<!--
 	<script type="text/javascript" src="scripts/parser/parser.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser_iq.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser_chat.js"></script>
 	<script type="text/javascript" src="scripts/parser/parser_presence.js"></script>
 	<script type="text/javascript" src="scripts/contact/contact.js"></script>
 	<script type="text/javascript" src="scripts/chat/chat.js"></script>
-
-	<script type="text/javascript" src="scripts/interface/login.js"></script>
+	-->
 </body>
 
 </html>
