Começando a montar interface e abrir salas.

--- a/index.html
+++ b/index.html
@@ -7,28 +7,20 @@
 <link rel="stylesheet" type="text/css" href="css/Login.css" />
 <link rel="stylesheet" type="text/css" href="css/Load.css" />
 
+<script type="text/javascript" src="scripts/utils/utils.js"></script>
+<script type="text/javascript" src="scripts/data/data.js"></script>
+<script type="text/javascript" src="scripts/data/consts.js"></script>
+<script type="text/javascript" src="scripts/login/login.js"></script>
+<script type="text/javascript" src="scripts/login/load.js"></script>
+<script type="text/javascript" src="scripts/connection/connection.js"></script>
+<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
+
+<script type="text/javascript" src="scripts/interface/login.js"></script>
+<script type="text/javascript" src="scripts/interface/load.js"></script>
+
 </head>
 
-<body>
-	<script type="text/javascript" src="scripts/utils/utils.js"></script>
-	<script type="text/javascript" src="scripts/data/data.js"></script>
-	<script type="text/javascript" src="scripts/data/consts.js"></script>
-	<script type="text/javascript" src="scripts/login/login.js"></script>
-	<script type="text/javascript" src="scripts/login/load.js"></script>
-	<script type="text/javascript" src="scripts/connection/connection.js"></script>
-	<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
-
-	<script type="text/javascript" src="scripts/interface/login.js"></script>
-	<script type="text/javascript" src="scripts/interface/load.js"></script>
-
-	<!--
-	<script type="text/javascript" src="scripts/parser/parser.js"></script>
-	<script type="text/javascript" src="scripts/parser/parser_iq.js"></script>
-	<script type="text/javascript" src="scripts/parser/parser_chat.js"></script>
-	<script type="text/javascript" src="scripts/parser/parser_presence.js"></script>
-	<script type="text/javascript" src="scripts/contact/contact.js"></script>
-	<script type="text/javascript" src="scripts/chat/chat.js"></script>
-	-->
+<body onload="INTERFACE_StartLogin()">
 </body>
 
 </html>
