Fixed: more compability with IE (Images, Game, Windows)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" type="text/css" href="css/Login.css" />
 <link rel="stylesheet" type="text/css" href="css/Load.css" />
 
+<!--[if IE]>
+<link rel="stylesheet" type="text/css" href="css/LoadIE.css" />
+<![endif]-->
+
 <script type="text/javascript" src="scripts/utils/utils.js"></script>
 <script type="text/javascript" src="scripts/data/data.js"></script>
 <script type="text/javascript" src="scripts/data/consts.js"></script>
