Fixed: New href on button cancel in register form

--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 		<p><b>Senha(confirmacao):</b><input type="password" class="pwd" id="confpwd"></p>
 		<p class="special">
 		<input type="button" class="enter" value="Cadastrar" id="register" onclick="post()">
-		<input type="button" class="enter" value="Cancelar" id="cancel" onclick="post()">
+		<input type="button" class="enter" value="Cancelar" id="cancel" onclick="window.location.href='./'">
 		</p>
 
 	</div>
