Load scripts and images only when user is logging.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <![endif]-->
 
 <script type="text/javascript" src="scripts/utils/utils.js"></script>
+<script type="text/javascript" src="scripts/utils/preloader.js"></script>
 <script type="text/javascript" src="scripts/data/data.js"></script>
 <script type="text/javascript" src="scripts/data/consts.js"></script>
 <script type="text/javascript" src="scripts/login/login.js"></script>
