Fixed game bugs.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body onload="INTERFACE_StartLogin(UTILS_GetLanguage())">
+<body onload="INTERFACE_StartLogin()">
 </body>
 
 </html>
