--- a/register.html
+++ b/register.html
@@ -2,34 +2,11 @@
 
 <link rel="stylesheet" type="text/css" href="css/Register.css" />
 
-<script type="text/javascript" src="scripts/register/Register.js"></script>
+<script type="text/javascript" src="scripts/register/register.js"></script>
 <script type="text/javascript" src="scripts/utils/utils.js"></script>
-<script language="javascript">
-	function labels(){
-		var XML = UTILS_OpenXMLFile("./scripts/lang/pt_BR.xml");
-		var inf = document.getElementById("register_inf");
-		var usrname = document.getElementById("register_user_name");
-		var mail = document.getElementById("register_mail"); 
-		var mail_inf = document.getElementById("register_mail_inf"); 
-		var pass = document.getElementById("register_passwd"); 
-		var pass_conf = document.getElementById("register_passwd_confirm");
-		var title =  document.getElementById("register_title");
-		var bt_confirm = document.getElementById("register");
-		var bt_cancel = document.getElementById("cancel");
-		inf.innerHTML = UTILS_GetTag(XML, "register_inf");
-		usrname.innerHTML = UTILS_GetTag(XML, "register_user_name");
-		mail.innerHTML = UTILS_GetTag(XML, "register_mail");
-		mail_inf.innerHTML = UTILS_GetTag(XML, "register_mail_inf");
-		pass.innerHTML = UTILS_GetTag(XML, "register_passwd");
-		pass_conf.innerHTML = UTILS_GetTag(XML, "register_passwd_confirm");
-		title.innerHTML = UTILS_GetTag(XML, "register_title");
-		bt_confirm.value = UTILS_GetTag(XML, "register_bt_confirm");
-		bt_cancel.value = UTILS_GetTag(XML, "register_bt_cancel");
 
 
-	}
-</script>
-<body onload="labels()">
+<body onload="REGISTER_Labels()">
 	<div id="mainDiv">
 		<h1 id="register_title"></h1>
 		<p class="italic" id="register_inf"></p>
@@ -39,7 +16,7 @@
 		<p><b id="register_passwd"></b><input type="password" class="pwd" id="pwd"></p>
 		<p><b id="register_passwd_confirm"></b><input type="password" class="pwd" id="confpwd"></p>
 		<p class="special">
-		<input type="button" class="enter" value="Cadastrar" id="register" onclick="post()">
+		<input type="button" class="enter" value="Cadastrar" id="register" onclick="REGISTER_Post()">
 		<input type="button" class="enter" value="Cancelar" id="cancel" onclick="window.location.href='./'">
 		</p>
 
