Fixed: Username register validate; Added: How to write a valid username in register window; Added: How to write a valid username message in pt_BR.xml;

--- a/register.html
+++ b/register.html
@@ -11,6 +11,7 @@
 		<h1 id="register_title"></h1>
 		<p class="italic" id="register_inf"></p>
 		<p><b id="register_user_name"></b><input type="text" class="nik" id="username"></p>
+		<p id="register_user_inf"></p>
 		<p><b id="register_mail"></b><input type="text" class="mail" id="mail"></p>
 		<p class= "inf" id="register_mail_inf"></p>
 		<p><b id="register_passwd"></b><input type="password" class="pwd" id="pwd"></p>
