Fixed: Set portuguese language to default language; Added: Default language tag in conf.xml; Added: Comments about StartLogin function in index.html;

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script type="text/javascript" src="scripts/interface/load.js"></script>
 
 </head>
-
+<!---INTERFACE_StartLogin() in scripts/interface/login.js-->
 <body onload="INTERFACE_StartLogin()">
 </body>
 
