--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="scripts/utils/utils.js"></script>
 
 
-<body onload="REGISTER_Labels()">
+<body onload="REGISTER_Labels()" onresize="REGISTER_VerticalAlignMiddle()">
 	<div id="mainDiv">
 		<h1 id="register_title"></h1>
 		<p class="italic" id="register_inf"></p>
@@ -23,5 +23,7 @@
 
 	</div>
 
+	<!-- Vertical align in middle  -->
+	<script>REGISTER_VerticalAlignMiddle();</script>
 </body>
 </html>
