--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 <script type="text/javascript" src="scripts/interface/login.js"></script>
 <script type="text/javascript" src="scripts/interface/load.js"></script>
 
+<script type="text/javascript" src="scripts/start.js"></script>
+
 </head>
 <!---INTERFACE_StartLogin() in scripts/interface/login.js-->
-<body onload="INTERFACE_StartLogin()">
+<body onload="START_StartPage()">
 </body>
 
 </html>
