Added: Load bar progress when start to load scripts, css and images; Added: Load parse script when load login page;

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <script type="text/javascript" src="scripts/load/load.js"></script>
 <script type="text/javascript" src="scripts/connection/connection.js"></script>
 <script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
+<script type="text/javascript" src="scripts/parser/parser.js"></script>
 
 <script type="text/javascript" src="scripts/interface/login.js"></script>
 <script type="text/javascript" src="scripts/interface/load.js"></script>
