--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta http-equiv="Expires" content="-1" />
 <meta http-equiv="Cache-Control" content="no-cache; must-revalidate" />
 
+<link rel="shortcut icon" href="images/favicon.ico" />
+
 <script type="text/javascript">
 	var TimeStampBrowser = new Date();
 	var NoCache = "";
