--- a/index.html
+++ b/index.html
@@ -6,60 +6,11 @@
 <meta http-equiv="Expires" content="-1" />
 <meta http-equiv="Cache-Control" content="no-cache; must-revalidate" />
 
-<link rel="shortcut icon" href="images/favicon.ico" />
-
-<script type="text/javascript">
-	var TimeStampBrowser = new Date();
-	var NoCache = "";
-	NoCache += TimeStampBrowser.getMonth();
-	NoCache += "/"+TimeStampBrowser.getDate();
-	NoCache += "/"+TimeStampBrowser.getFullYear();
-	NoCache += "-"+TimeStampBrowser.getHours();
-	NoCache += ":"+TimeStampBrowser.getMinutes();
-	NoCache += ":"+TimeStampBrowser.getSeconds();
-</script>
-
-<link rel="stylesheet" type="text/css" href="css/Main.css" />
-<link rel="stylesheet" type="text/css" href="css/Login.css" />
-<link rel="stylesheet" type="text/css" href="css/Load.css" />
+<script type="text/javascript" src="initial_files.js"></script>
 
 <!--[if IE]>
 <link rel="stylesheet" type="text/css" href="css/LoadIE.css" />
 <![endif]-->
-
-<script type="text/javascript" src="scripts/utils/utils.js"></script>
-<script type="text/javascript" src="scripts/utils/preloader.js"></script>
-<script type="text/javascript" src="scripts/data/data.js"></script>
-<script type="text/javascript" src="scripts/data/consts.js"></script>
-<script type="text/javascript" src="scripts/login/login.js"></script>
-<script type="text/javascript" src="scripts/load/load.js"></script>
-<script type="text/javascript" src="scripts/connection/connection.js"></script>
-<script type="text/javascript" src="scripts/xmpp_messages/message.js"></script>
-<script type="text/javascript" src="scripts/parser/parser.js"></script>
-
-<script type="text/javascript" src="scripts/interface/login.js"></script>
-<script type="text/javascript" src="scripts/interface/load.js"></script>
-
-<script type="text/javascript" src="scripts/start.js"></script>
-
-<script type="text/javascript">
-	function NoCacheIndex()
-	{
-		var i;
-		var Css = document.getElementsByTagName("link");
-		var Scripts = document.getElementsByTagName("script");
-		for (i=0; i< Css.length; i++)
-		{
-			Css[i].href += "?"+NoCache;
-		}
-		for (i=0; i < Scripts.length; i++)
-		{
-			if (Scripts[i].src != "")
-				Scripts[i].src += "?"+NoCache;
-		}
-	}
-	NoCacheIndex();
-</script>
 
 </head>
 <!---INTERFACE_StartLogin() in scripts/interface/login.js-->
