Modified: Added title tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 <meta http-equiv="Cache-Control" content="no-cache; must-revalidate" />
+<title>Xadrez Livre - O melhor lugar para jogar Xadrez online</title>
 
 <script type="text/javascript" src="initial_files.js"></script>
 
